completed the backend

--- a/coreapp/templates/layout.html
+++ b/coreapp/templates/layout.html
@@ -49,6 +49,7 @@
                 <a class="list-group-item active" href="#">Upcoming Events</a>
                 <a class="list-group-item" href="#">Clubs</a>
                 <a class="list-group-item" href="home/clubview">↳ My Clubs</a>
+                <a class="list-group-item" href="/coordinator/venuecreation">create a venue </a>
                 <a class="list-group-item" href="/user/updatedetails">My Profile</a>
               </ul>
             </div>
