--- a/coreapp/templates/admin.html
+++ b/coreapp/templates/admin.html
@@ -39,7 +39,7 @@
                     <li class="nav-item">
                         <button class="btn py-3 px-2 sectionBtn" data-section="user_modification" title="" data-bs-toggle="tooltip"
                                 data-bs-placement="right" data-bs-original-title="Home">
-                            <i style="font-size: 1.5rem;" class="bi-people fs-1"></i>
+                            <i style="font-size: 1.5rem;" class="bi-person-circle fs-1"></i>
                         </button>
                     </li>
 
@@ -60,7 +60,7 @@
                     <li>
                         <button class="btn py-3 px-2 sectionBtn" data-section="club_modification" title=""
                                 data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Home">
-                            <i style="font-size: 1.5rem;" class="bi bi-book fs-1"></i>
+                            <i style="font-size: 1.5rem;" class="bi bi-people fs-1"></i>
                         </button>
                     </li>
 
