--- a/coreapp/templates/admin.html
+++ b/coreapp/templates/admin.html
@@ -269,17 +269,17 @@
                 </div>
             </div>
             <div id="membership_modification" class="section">
-                {% for club_username, users in membership_requests.items %}
+                {% for club_info, users in membership_requests.items %}
                     <div class="card">
-                        <div class="card-header" id="heading{{ club_username }}">
+                        <div class="card-header" id="heading{{ club_info.0 }}">
                             <h2 class="mb-0">
-                                <button class="btn btn-link" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ club_id }}" aria-expanded="true" aria-controls="collapse{{ club_id }}">
-                                    {{ club_username }}
+                                <button class="btn btn-link" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ club_info.1 }}" aria-expanded="true" aria-controls="collapse{{ club_info.1 }}">
+                                    {{ club_info.0 }}
                                 </button>
                             </h2>
                         </div>
 
-                        <div id="collapse{{ club_id }}" class="collapse" aria-labelledby="heading{{ club_id }}" data-parent="#accordionExample">
+                        <div id="collapse{{ club_info.1 }}" class="collapse" aria-labelledby="heading{{ club_info.1 }}" data-parent="#accordionExample">
                             <div class="card-body">
                                 <table class="table">
                                     <thead>
