Homepage link hotfix

--- a/coreapp/templates/pages/index.html
+++ b/coreapp/templates/pages/index.html
@@ -19,6 +19,6 @@
         </div>
         <div class="row mt-4">
             <h4>Click here to login or sign up</h4>
-            <a href="login.html" type="button" class="btn btn-primary w-25 mx-auto" >Login/Signup</a>
+            <a href="/login" type="button" class="btn btn-primary w-25 mx-auto" >Login/Signup</a>
 </body>
 </html>
