--- a/coreapp/templates/pages/coordinator/clubcreation.html
+++ b/coreapp/templates/pages/coordinator/clubcreation.html
@@ -1,12 +1,5 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Create a Club</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-  </head>
-  <body>
+{% extends "layout.html" %}
+{% block content %}
     <div class="container text-center">
         <div class="col">
             <h1 class="h2">Create a club</h1>
@@ -16,14 +9,12 @@
                 
                 <label for="club_name">Name: </label>
                 <input type="text" name="club-name" class="form-control" placeholder="Name" required>
-                <label for="club_description">Description: </label>
-                <textarea type="text" class="form-control" name="club-description" id="club-description">
-                </textarea>
+                <label for="club-description">Description: </label>
+                <textarea class="form-control" name="club-description" id="club-description"></textarea>
                 </div>
                 <button type="submit" class="btn mt-2 btn-primary">Create</button>
             </form>
           </div>
         </div>
     </div>
-  </body>
-</html>
+{% endblock %}
