--- a/coreapp/templates/pages/coordinator/eventcreation.html
+++ b/coreapp/templates/pages/coordinator/eventcreation.html
@@ -1,12 +1,5 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Create an event</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-  </head>
-  <body>
+{% extends "layout.html" %}
+{% block content %}
     <div class="container text-center">
         <div class="col">
             <h1 class="h2">Create an event</h1>
@@ -32,5 +25,4 @@
           </div>
         </div>
     </div>
-  </body>
-</html>
+{% endblock %}
