--- a/coreapp/templates/pages/coordinator/pendingapproval.html
+++ b/coreapp/templates/pages/coordinator/pendingapproval.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +9,7 @@
     <body>
         <div class="container text-center">
             <div class="col">
-                <h2>Your club is pending administator approval</h2>
+                <h2>Your club is pending administrator approval</h2>
                 <h6>Please check back later</h6>
             </div>
         </div>
