--- a/coreapp/templates/pages/coordinator/venuecreation.html
+++ b/coreapp/templates/pages/coordinator/venuecreation.html
@@ -1,23 +1,16 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Create a venue</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-  </head>
-  <body>
+{% extends "layout.html" %}
+{% block content %}
     <div class="container text-center align-center">
-        <div class="col">
-            <h1 class="h2">Create a venue</h1>
-            <form action="/coordinator/venuecreationattempt" method="post">
+        <div class="row">
+            <h1 class="h3 my-auto">Create a venue</h1>
+            <form action="/coordinator/venuecreationattempt" class="" method="post">
                 {% csrf_token %}
-                <label for="venue">Venue</label>
-                <input type="text" name="venue" class="form-control w-50 mx-auto" placeholder="Venue" required>
-                <button type="submit" class="btn mt-2 btn-primary">Create</button>
+{#                <label for="venue">Venue</label>#}
+                <input type="text" name="venue" class="form-control w-50 my-2 mx-auto" placeholder="Venue Name" required>
+                <button type="submit" class="btn btn-primary">Create</button>
             </form>
-          </div>
+
+        </div>
         </div>
     </div>
-  </body>
-</html>
+{% endblock %}
