proper single-select!! *rtfm*

--- a/coreapp/templates/pages/coordinator/clubmanagement.html
+++ b/coreapp/templates/pages/coordinator/clubmanagement.html
@@ -68,7 +68,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="overflow-auto" style="max-height: 400px;">
-                                    <table id="all_users_table" data-toggle="table" data-multiple-select-row="true"
+                                    <table id="all_users_table" data-toggle="table"   data-single-select="true"
                                            data-click-to-select="true" data-pagination="true" data-search="true"
                                            data-buttons="all_users_buttons">
                                         <thead>
@@ -120,7 +120,7 @@
                                     <table id="pending_users_table"
                                             data-toggle="table"
                                           data-show-columns="true"
-                                          data-multiple-select-row="true"
+                                          data-single-select="true"
                                           data-click-to-select="true"
                                           data-pagination="true"
                                           data-search="true"
@@ -192,7 +192,7 @@
                 <table id="pending_event_table"
                        data-toggle="table"
                       data-show-columns="true"
-                      data-multiple-select-row="true"
+                      data-single-select="true"
                       data-click-to-select="true"
                       data-pagination="true"
                       data-search="true"
