who wants to see abbaesque with me?,please...i integrated club management, fixed a style bug in clubmanagement and standardised styles for you 🥺👉👈

--- a/coreapp/templates/layout.html
+++ b/coreapp/templates/layout.html
@@ -48,8 +48,8 @@
                 <!-- TODO: differing navbars by user profile type -->
                 {% if user_type == 1 %}
                     <a class="list-group-item" href="/coordinator/home">Upcoming Events</a>
-                    <a class="list-group-item" href="/coordinator/venuecreation">Create a venue </a>
-
+                    <a class="list-group-item" href="/coordinator/venuecreation">Create a venue</a>
+                    <a class="list-group-item" href="/coordinator/clubmanagement">Manage your club</a>
                 {% endif %}
 
 
