--- a/coreapp/templates/admin.html
+++ b/coreapp/templates/admin.html
@@ -29,8 +29,8 @@
 <body>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-auto bg-light sticky-top">
-            <div class="d-flex flex-sm-column flex-row flex-nowrap bg-light align-items-center sticky-top">
+        <div class="col-auto sticky-top">
+            <div class="d-flex flex-sm-column flex-row flex-nowrap  align-items-center sticky-top">
                 <a href="/" class="d-block p-3 link-dark text-decoration-none" title="" data-bs-toggle="tooltip"
                    data-bs-placement="right" data-bs-original-title="Icon-only">
                     <i style="font-size: 1.5rem;" class="bi-house fs-1"></i>
