--- a/coreapp/templates/pages/index.html
+++ b/coreapp/templates/pages/index.html
@@ -20,5 +20,75 @@
         <div class="row mt-4">
             <h4>Click here to login or sign up</h4>
             <a href="/login" type="button" class="btn btn-primary w-25 mx-auto" >Login/Signup</a>
+        </div>
+    </div>
+    <div class="container text-center mt-5">
+<div class="row">
+    <div class="col-md-12">
+        <h2>Features</h2>
+    </div>
+</div>
+<div class="row mt-4">
+    <div class="col-md-4">
+        <div class="card border">
+            <div class="card-body">
+                <h4 class="card-title">Clubs</h4>
+                <p class="card-text">View all clubs and their members, create and manage events</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="card border">
+            <div class="card-body">
+                <h4 class="card-title">Members</h4>
+                <p class="card-text">Join clubs, attend events and have some fun!</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="card border">
+            <div class="card-body">
+                <h4 class="card-title">Admin</h4>
+                <p class="card-text">Admin can create, update, and delete clubs and their members</p>
+            </div>
+        </div>
+    </div>
+        <div class="container mt-5">
+    <h2>Customer Reviews</h2>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Jean Carson</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Famous author David Wallace</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Darragh</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+    </div>
+
+<footer class="footer mt-auto py-3">
+  <div class="container text-center">
+    <span class="text-muted">© 2024 ClubHub. All rights reserved.</span>
+  </div>
+</footer>
 </body>
+
 </html>
