Icon change Event table fix Sidebar fix

--- a/coreapp/templates/admin.html
+++ b/coreapp/templates/admin.html
@@ -31,40 +31,33 @@
     <div class="row">
         <div class="col-auto sticky-top">
             <div class="d-flex flex-sm-column flex-row flex-nowrap  align-items-center sticky-top">
-                <a href="/" class="d-block p-3 link-dark text-decoration-none" title="" data-bs-toggle="tooltip"
-                   data-bs-placement="right" data-bs-original-title="Icon-only">
-                    <i style="font-size: 1.5rem;" class="bi-house fs-1"></i>
-                </a>
-                <ul class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center justify-content-between w-100 px-3 align-items-center">
-                    <li class="nav-item">
-                        <button class="btn py-3 px-2 sectionBtn" data-section="user_modification" title="" data-bs-toggle="tooltip"
+                <div class="btn-group-vertical">
+                        <a href="/" class="btn btn-secondary mt-3 p-2" title="" data-bs-toggle="tooltip"
+                            data-bs-placement="right" data-bs-original-title="Icon-only">
+                            Home
+                        </a>
+                        <button class="btn btn-secondary p-2 sectionBtn" data-section="user_modification" title="" data-bs-toggle="tooltip"
                                 data-bs-placement="right" data-bs-original-title="Home">
-                            <i style="font-size: 1.5rem;" class="bi-person-circle fs-1"></i>
+                            Users
                         </button>
-                    </li>
-
-                    <li>
-                        <button class="btn py-3 px-2 sectionBtn" data-section="coordinator_modification" title=""
+                    
+                        <button class="btn btn-secondary p-2 sectionBtn" data-section="coordinator_modification" title=""
                                 data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Home">
-                            <i style="font-size: 1.5rem;" class="bi-speedometer2 fs-1"></i>
+                            Coordinators
                         </button>
-                    </li>
 
-                     <li>
-                        <button class="btn py-3 px-2 sectionBtn" data-section="membership_modification" title=""
+                        <button class="btn btn-secondary p-2 sectionBtn" data-section="club_modification" title=""
                                 data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Home">
-                            <i style="font-size: 1.5rem;" class="bi-book fs-1"></i>
+                            Clubs
                         </button>
-                    </li>
-
-                    <li>
-                        <button class="btn py-3 px-2 sectionBtn" data-section="club_modification" title=""
+                    
+                        <button class="btn btn-secondary p-2 sectionBtn" data-section="membership_modification" title=""
                                 data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Home">
-                            <i style="font-size: 1.5rem;" class="bi-people fs-1"></i>
+                            Club Members
                         </button>
-                    </li>
 
-                </ul>
+
+                </div>
             </div>
         </div>
         <div class="col-xl p-3 min-vh-100">
