--- a/coreapp/templates/pages/coordinator/clubmanagement.html
+++ b/coreapp/templates/pages/coordinator/clubmanagement.html
@@ -45,20 +45,21 @@
                     <a class="list-group-item" href="/coordinator/venuecreation">Create a venue </a>
                     <a class="list-group-item" href="/coordinator/clubmanagement">Manage your club</a>
                    <div class="col-auto sticky-top list-group-item">
+                    
             <div class="d-flex flex-sm-column flex-row flex-nowrap align-items-center sticky-top">
                 <ul class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center justify-content-between w-100 px-3 align-items-center">
                     <li class="nav-item">
                         <button class="btn py-1 px-2 sectionBtn " data-section="user_modification" title=""
                                 data-bs-toggle="tooltip"
-                                data-bs-placement="right" data-bs-original-title="Home">
-                            <i style="font-size: 1.5rem;" class="bi-person-circle fs-1"></i>
+                                data-bs-placement="right">
+                            Members
                         </button>
                     </li>
 
                     <li>
                         <button class="btn py-1 px-2 sectionBtn  px-auto" data-section="event_modification" title=""
-                                data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Home">
-                            <i style="font-size: 1.5rem;" class="bi-speedometer2 fs-1"></i>
+                                data-bs-toggle="tooltip" data-bs-placement="right">
+                            Event Applications
                         </button>
                     </li>
                 </ul>
