--- a/coreapp/templates/layout.html
+++ b/coreapp/templates/layout.html
@@ -46,14 +46,14 @@
                 </li>
                 
                 <!-- TODO: differing navbars by user profile type -->
-                {% if user_type == 1 %}
+                {% if request.session.user.type == 1 %}
                     <a class="list-group-item" href="/coordinator/home">Upcoming Events</a>
                     <a class="list-group-item" href="/coordinator/venuecreation">Create a venue</a>
                     <a class="list-group-item" href="/coordinator/clubmanagement">Manage your club</a>
                 {% endif %}
 
 
-                {% if user_type == 0 %}
+                {% if request.session.user.type == 0 %}
                 <a class="list-group-item" href="/home">Upcoming Events</a>
                 <a class="list-group-item" href="/home/clubview">Clubs</a>
               {% endif %}
