--- a/coreapp/templates/pages/coordinator/eventcreation.html
+++ b/coreapp/templates/pages/coordinator/eventcreation.html
@@ -15,7 +15,13 @@
                 <label for="club">Club</label>
                 <input type="text" name="club" class="form-control" placeholder="Club" required> -->
                 <label for="venue">Venue</label>
-                <input type="text" name="venue" class="form-control" placeholder="Address" required>
+
+                <select class="form-select" name="venue">
+                    {% for venue in venues %}
+                        <option value="{{ venue.venue }}">{{ venue.venue }}</option>
+                    {% endfor %}
+                </select>
+
                 <label for="start-date">Start Time</label>
                 <input type="datetime-local" name="start-date" class="form-control" placeholder="Start Time" required>
                 <label for="end-date">End Time</label>
